--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -17,9 +17,25 @@
     <div class="card-container">
       <img src="images/illustration-hero.svg" alt="Illustration Hero" />
       <h1>Order Summary</h1>
-      You can now listen to millions of songs, audiobooks, and podcasts on any
-      device anywhere you like! Annual Plan $59.99/year Change Proceed to
-      Payment Cancel Order
+      <div class="text-container">
+        <p>
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </p>
+        <div class="interaction-container">
+          <img
+            src="images/icon-music.svg"
+            alt="Music Icon"
+            class="icon-music"
+          />
+          <h3 id="annual-plan">Annual Plan</h3>
+          <p>$59.99/year</p>
+        </div>
+        <p id="change">Change</p>
+
+        <button>Proceed to Payment</button>
+        <p>Cancel Order</p>
+      </div>
     </div>
     <footer class="attribution">
       Challenge by
