added media breakpoints for responsibility v1.1.1

--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="card-container">
       <img src="images/illustration-hero.svg" alt="Illustration Hero" />
-      <h1>Order Summary</h1>
+      <h1 id="ordersum">Order Summary</h1>
       <div class="text-container">
         <p>
           You can now listen to millions of songs, audiobooks, and podcasts on
@@ -29,7 +29,7 @@
             class="icon-music"
           />
           <h3 id="annual-plan">Annual Plan</h3>
-          <p>$59.99/year</p>
+          <p id="price">$59.99/year</p>
         </div>
         <p id="change">Change</p>
 
